fix overflow

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,9 @@
+body{
+    overflow: hidden;
+}
 a-scene {
     display: block;
+    position: fixed !important;
     width: 100vw !important;
     height: 100vh !important;
 }
@@ -9,6 +13,7 @@ a-scene {
 #snap-button-wrapper{
     position: fixed;
     bottom:0;
+    left: 0;
     width: 100vw;
     z-index: 9999;
     display: flex;
